--- a/templates/base.html
+++ b/templates/base.html
@@ -62,3 +62,10 @@
     {% endblock %}
 </body>
 </html>
+<!-- Navigation -->
+<a class="navbar-brand" href="{{ base_url }}{{ url_for('home') }}">
+    {{ app_name }}
+</a>
+
+<!-- Social Media Links (Placeholder) -->
+<a href="{{ base_url }}/future-twitter" class="social-link">𝕏</a>
